--- a/src/Movies.css
+++ b/src/Movies.css
@@ -15,14 +15,13 @@
   font-size: 2vh;
   padding: 1.5rem;
   top: 28.2%;
-  max-width: 50vw;
   width: fit-content;
   text-shadow: 1px 1px 3px black;
   border-radius: 0.5rem;
 }
 .main-img-after {
   background: #000000ba;
-  background: radial-gradient(transparent, black);
+  background: linear-gradient(87deg, #000000bd, #0000003d,transparent),radial-gradient(transparent, black);
   content: " ";
   display: block;
   width: 100%;
@@ -109,4 +108,6 @@
 
 .main-details .main-overview{
     letter-spacing: 1.4px;
+    width: 75vw;
+    max-width: 500px;
 }
